<resources>
    <string name="app_name">"视频间谍"</string>
    <string name="action_settings">设置</string>
    <string name="sousuo">请输入要搜索的内容</string>
    <string name="snackbar_context">搜索数据不能为空</string>
    <string name="snackbar_err">加载失败,请尝试刷新</string>
    <!--################## 设置 ####################-->
    <string name="setting">设置</string>
    <string name="setting_other">设计</string>
    <string name="setting_wifi">仅WIFI下载歌曲</string>
    <string name="setting_wifi_subtitle">节省您的流量</string>

    <string name="setting_normal">常规</string>
    <string name="setting_notify">自动更新</string>
    <string name="setting_notify_subtitle">软件已开启自动更新</string>
    <string name="setting_about_android">关于软件</string>
    <string name="setting_about_me">月下独酌</string>
    <string name="setting_update_title">客户端更新</string>
    <string name="setting_update_loading">正在为你检查更新中…</string>
    <string name="setting_logout">登出</string>
    <string name="setting_logout_tip">确定要退出此账号吗？</string>
</resources>
